--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -10,10 +10,10 @@
                     <field name="delivery_location"/>
                     <label for="delivery_from" string="Period"/>
                     <div name="date_edit_only" class="o_row oe_edit_only">
-                        <span>From
+                        <span><strong>From </strong>
                             <field name="delivery_from" class='oe_inline'/>
                         </span>
-                        <span>To
+                        <span><strong>To </strong>
                             <field name="delivery_to" class='oe_inline'/>
                         </span>
                     </div>
@@ -39,6 +39,9 @@
                     </page>
                     <page name="truck_details" string="Truck Details">
                         <field name="truck_transport_details_ids"/>
+                    </page>
+                    <page  name="vessels_information" string="Vessel Details">
+                        <field name="vessel_ids"/>
                     </page>
                 </xpath>
             </field>
