Fixed the issue on sales invoice not printing

--- a/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
+++ b/oe_kemoxon_delivery_custom/report/invoice_report_template.xml
@@ -203,8 +203,114 @@
                 <br/>
                 <div class="row">
                     <div class="col-6">
-                        <t t-if="o.delivery_location">
+
+
+                        <t t-if="o.vessel_information_id">
+
+                        <t t-if="o.bl_date">
                             <div class="row">
+                                <div class="col-3">
+                                    <strong>B/L Date</strong>
+                                </div>
+                                <br/>
+                                 <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.bl_date"/>
+                                </div>
+                            </div>
+                        </t>
+                         <t t-if="o.loadport">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Port of Loading</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.loadport"/>
+                                </div>
+                            </div>
+                        </t>
+
+                         <t t-if="o.vessel_name">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Vessel</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.vessel_name"/>
+                                </div>
+                            </div>
+                        </t>
+                         <t t-if="o.disport">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Port of Discharge</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.disport"/>
+                                </div>
+                            </div>
+                        </t>
+
+                         <t t-if="o.country_of_origin">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Country of Origin</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.country_of_origin"/>
+                                </div>
+                            </div>
+                        </t>
+                         <t t-if="o.invoice_incoterm_id">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Incoterm</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.invoice_incoterm_id"/>
+                                </div>
+                            </div>
+                        </t>
+                         <t t-if="o.ncv">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Net Caloric Value</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.ncv"/>
+                                </div>
+                            </div>
+                        </t>
+                        <t t-if="o.delivery_notes">
+                            <div class="row">
+                                <div class="col-3">
+                                    <strong>Delivery Notes</strong>
+                                </div>
+                                <br/>
+                                <div class="col-1"/>
+                                <div class="col-6">
+                                    <span class="m-0" t-field="o.delivery_notes"/>
+                                </div>
+                            </div>
+                        </t>
+               </t>
+                        <t t-else="">
+
+                            <t t-if="o.delivery_location">
+
+                                <div class="row">
                                 <div class="col-3">
                                     <strong>Delivery Location</strong>
                                 </div>
@@ -213,7 +319,9 @@
                                 <div class="col-6">
                                     <span class="m-0" t-field="o.delivery_location"/>
                                 </div>
-                            </div>
+
+                                 </div>
+
                         </t>
                         <t t-if="o.invoice_incoterm_id">
                             <div class="row">
@@ -226,8 +334,10 @@
                                     <span class="m-0" t-field="o.invoice_incoterm_id"/>
                                 </div>
                             </div>
+
                         </t>
 
+                        </t>
 <!--                        <t t-if="o.bill_date">-->
 <!--                            <div class="row">-->
 <!--                                <div class="col-3">-->
@@ -242,18 +352,18 @@
 <!--                            </div>-->
 <!--                        </t>-->
 
-                        <t t-if="o.vessel_name">
-                            <div class="row">
-                                <div class="col-3">
-                                    <strong>Vessel Name</strong>
-                                </div>
-                                <br/>
-                                <div class="col-1"/>
-                                <div class="col-6">
-                                    <span class="m-0" t-field="o.vessel_name"/>
-                                </div>
-                            </div>
-                        </t>
+<!--                        <t t-if="o.vessel_name">-->
+<!--                            <div class="row" id="vesselrow">-->
+<!--                                <div class="col-3">-->
+<!--                                    <strong>Vessel Name</strong>-->
+<!--                                </div>-->
+<!--                                <br/>-->
+<!--                                <div class="col-1"/>-->
+<!--                                <div class="col-6">-->
+<!--                                    <span class="m-0" t-field="o.vessel_name"/>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </t>-->
 
                     </div>
                     <!--                    <div class="col-2"/>-->
