[MOD] CONTACT APPROVAL

--- a/contacts_import_fields/views/views.xml
+++ b/contacts_import_fields/views/views.xml
@@ -1,7 +1,7 @@
 <odoo>
     <data>
         <record id="res_partner_form_inherit" model="ir.ui.view">
-            <field name="name">base.view.partner.form.inherit</field>
+            <field name="name">base.view.partner.form.inherit.add.short.name</field>
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
