added payment/delivery notes to sales invoice Added transporter to line level and changed in printout to pick from line level. Enabled inline editing on vessel.

--- a/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
+++ b/oe_kemoxon_delivery_custom/views/trucktransportdetails.xml
@@ -6,6 +6,7 @@
         <field name="arch" type="xml">
             <tree editable="bottom">
                 <field name="date"/>
+                 <field name="transporter"/>
                 <field name="truck"/>
                 <field name="trailer"/>
                 <field name="driver"/>
