[MOD] truck invoice

--- a/oe_kemoxon_delivery_custom/views/account_move_views.xml
+++ b/oe_kemoxon_delivery_custom/views/account_move_views.xml
@@ -9,6 +9,10 @@
                        position="replace">
                     <field name="journal_id" domain="[]"/>
                 </xpath>
+                <xpath expr="//field[@name='invoice_line_ids']//field[@name='price_unit']"
+                       position="after">
+                    <field name="deduction"/>
+                </xpath>
                 <xpath expr="//field[@name='invoice_user_id']"
                        position="after">
                     <field name="deal_ref" invisible="0"/>
@@ -22,7 +26,8 @@
                 </xpath>
 
                 <xpath expr="//field[@name='partner_id']" position="attributes">
-                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}</attribute>
+                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}
+                    </attribute>
                 </xpath>
             </field>
         </record>
@@ -34,7 +39,8 @@
             <field name="inherit_id" ref="account.view_account_payment_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='partner_id']" position="attributes">
-                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}</attribute>
+                    <attribute name="options">{'no_quick_create':True,'no_create_edit':True,'no_open': True,}
+                    </attribute>
                 </xpath>
             </field>
         </record>
