--- a/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
+++ b/oe_kemoxon_delivery_custom/views/stock_picking_view.xml
@@ -5,6 +5,13 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//button[@name='action_confirm']"
+                       position="after">
+                    <field name="is_truck_invoice_created" invisible="1"/>
+                    <button name="action_create_truck_invoice" attrs="{'invisible': [('is_truck_invoice_created', '=', True)]}"
+                            string="Create Truck Invoice" type="object" class="oe_highlight" />
+
+                </xpath>
                 <xpath expr="//field[@name='origin']"
                        position="after">
                     <field name="delivery_location"/>
